# ssorts

./: .astylerc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug.sh  fmt.sh  main.cpp  regen_cmake.sh  regen_extern.sh  release-run.sh  release.sh  task.txt  task2.txt
include/ssorts/: binary_insertion_sort.hpp  bubble_sort.hpp  exchange_sort.hpp  external_1pass_merge_sort.hpp  external_2pass_merge_sort.hpp  external_natural_merge_sort.hpp  insertion_sort.hpp  optimized_bubble_sort.hpp  quick_sort.hpp  selection_sort.hpp  shaker_sort.hpp  shell_sort.hpp  util.hpp
test/: binary_insertion_sort_test.cpp  bubble_sort_test.cpp  exchange_sort_test.cpp  external_merge_1pass_sort_test.cpp  external_merge_2pass_sort_test.cpp  external_natural_merge_sort.cpp  insertion_sort_test.cpp  main.cpp  optimized_bubble_sort_test.cpp  quick_sort_test.cpp  selection_sort_test.cpp  shaker_sort_test.cpp  shell_sort_test.cpp  util.cpp  util.hpp
